[package]
name = "dialtone"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi10", "tokio_rt"] }
napi-derive = "3"
zenoh = "1.9.0"
tokio = { version = "1", features = ["time"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
