[workspace]
members = ["./packages/dialtone"]

resolver = "2"

[workspace.dependencies]
napi = { version = "3", default-features = false, features = ["napi10", "async"] }
napi-build = "2"
napi-derive = "3"

zenoh = { version = "1.9.0", features = ["unstable", "internal"] }
zenoh-ext = { version = "1.9.0", features = ["unstable"] }

[profile.release]
lto = "thin"
strip = "symbols"

